--- a/client/global.css
+++ b/client/global.css
@@ -1,3 +1,8 @@
+/*******************************
+ *     Global Stylesheets      *
+ *******************************/
+
+
 div.panel > div {
   min-width:  640px    !important;
   width:      auto     !important;
