Prepending Button to pvpnet-bar; Own css class for button

--- a/client/global.css
+++ b/client/global.css
@@ -83,3 +83,16 @@
   bottom: 17px;
   right: 4px;
 }
+
+.userscript-pvpnet-bar {
+  color: rgb(0, 150, 255);
+  background: url("https://s3-us-west-2.amazonaws.com/sandworm/images/pvpnet-sprite-v2.png") repeat-x scroll 0px -42px transparent;
+  padding: 0px 10px;
+  line-height: 31px;
+  height: 31px;
+  text-transform: uppercase;
+  display: inline-block;
+  text-decoration: none;
+  border-left: 1px solid rgb(43, 43, 43);
+  border-right: 1px solid rgba(35, 35, 35, 0.7);
+}
