--- a/client/global.css
+++ b/client/global.css
@@ -84,7 +84,7 @@
   right: 4px;
 }
 
-.userscript-pvpnet-bar {
+.userscript-pvpnet-bar a {
   color: rgb(0, 150, 255);
   background: url("https://s3-us-west-2.amazonaws.com/sandworm/images/pvpnet-sprite-v2.png") repeat-x scroll 0px -42px transparent;
   padding: 0px 10px;
