--- a/client/global.css
+++ b/client/global.css
@@ -5,6 +5,14 @@
 .userscript-textarea {
   resize: vertical;
   min-height: 80px;
+  
+  border-color: rgba(82, 168, 236, 0.8);
+  outline: 0px none;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(204, 204, 204);
+  transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+  border-radius: 4px 4px 4px 4px;
 }
 
 .userscript-clear {
