--- a/client/global.css
+++ b/client/global.css
@@ -3,108 +3,124 @@
  *******************************/
 
 .userscript-textarea {
-  resize: vertical;
-  min-height: 80px;
-  
-  border-color: rgba(82, 168, 236, 0.8);
-  outline: 0px none;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(204, 204, 204);
-  transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
-  border-radius: 4px 4px 4px 4px;
+    resize: vertical;
+    min-height: 80px;
+    border-color: rgba(82, 168, 236, 0.8);
+    outline: 0px none;
+    -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(204, 204, 204);
+    -moz-transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    -o-transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    -webkit-transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    border-radius: 4px 4px 4px 4px;
 }
 
 .userscript-clear {
-  clear: both;
+    clear: both;
 }
 
 .userscript-editor-container {
-  overflow: hidden;
-  position: relative;
-  left: -16px;
-  width: auto;
-  max-width: none;
+    overflow: hidden;
+    position: relative;
+    left: -16px;
+    width: auto;
+    max-width: none;
 }
 
 .userscript-avatar {
-  float: left;
-  position: relative;
-  left: -16px;
+    float: left;
+    position: relative;
+    left: -16px;
 }
 
-.userscript-avatar div{
-  padding-top: 10px;
-  width: 205px;
-  text-align: center;
-}
+    .userscript-avatar div {
+        padding-top: 10px;
+        width: 205px;
+        text-align: center;
+    }
 
-.userscript-avatar big {
-  display: block;
-  font-size: 13px;
-  font-weight: bold;
-  padding-bottom: 5px;
-  color: #333;
-}
+    .userscript-avatar big {
+        display: block;
+        font-size: 13px;
+        font-weight: bold;
+        padding-bottom: 5px;
+        color: #333;
+    }
 
-.userscript-avatar small {
-  display: block;
-  font-size: 11px;
-  font-weight: bold;
-  color: #333;
-}
+    .userscript-avatar small {
+        display: block;
+        font-size: 11px;
+        font-weight: bold;
+        color: #333;
+    }
 
-.userscript-avatar a {
-  position: relative;
-  display: block;
-  width: 145px;
-  height: 100px;
-  background: url("http://riot-web-static.s3.amazonaws.com/forum/ui/avatar.png") no-repeat;
-  margin: 0px auto;
-}
+    .userscript-avatar a {
+        position: relative;
+        display: block;
+        width: 145px;
+        height: 100px;
+        background: url("http://riot-web-static.s3.amazonaws.com/forum/ui/avatar.png") no-repeat;
+        margin: 0px auto;
+    }
 
 .userscipt-user-summoner-icon {
-  width: 80px;
-  height: 80px;
-  margin: 7px 0 0 1px;
+    width: 80px;
+    height: 80px;
+    margin: 7px 0 0 1px;
 }
 
 .userscript-left-orb {
-  display: block;
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  left: 6px;
-  bottom: 17px;
-  font-size: 11px;
-  font-weight: bold;
-  color: white;
-  line-height: 20px;
-  text-align: center;
+    display: block;
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 6px;
+    bottom: 17px;
+    font-size: 11px;
+    font-weight: bold;
+    color: white;
+    line-height: 20px;
+    text-align: center;
 }
 
 .userscript-right-orb {
-  display: block;
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  bottom: 17px;
-  right: 4px;
+    display: block;
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    bottom: 17px;
+    right: 4px;
 }
 
 .userscript-pvpnet-bar a {
-  color: rgb(0, 150, 255);
-  background: url("https://s3-us-west-2.amazonaws.com/sandworm/images/pvpnet-sprite-v2.png") repeat-x scroll 0px -42px transparent;
-  padding: 0px 10px;
-  line-height: 31px;
-  height: 31px;
-  text-transform: uppercase;
-  display: inline-block;
-  text-decoration: none;
-  border-left: 1px solid rgb(43, 43, 43);
-  border-right: 1px solid rgba(35, 35, 35, 0.7);
+    color: rgb(0, 150, 255);
+    background: url("https://s3-us-west-2.amazonaws.com/sandworm/images/pvpnet-sprite-v2.png") repeat-x scroll 0px -42px transparent;
+    padding: 0px 10px;
+    line-height: 31px;
+    height: 31px;
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
+    border-left: 1px solid rgb(43, 43, 43);
+    border-right: 1px solid rgba(35, 35, 35, 0.7);
 }
 
 .userscript-pvpnet-bar {
-  float: right;
+    float: right;
+}
+
+.userscript-name-button {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+  margin: 0px;
+  padding: 0px;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 16px;
 }
