--- a/client/global.css
+++ b/client/global.css
@@ -36,7 +36,7 @@
     left: -16px;
 }
 
-    .userscript-avatar div {
+    .userscript-avatar > div {
         padding-top: 10px;
         width: 205px;
         text-align: center;
