--- a/client/global.css
+++ b/client/global.css
@@ -96,7 +96,7 @@
 }
 
 .userscript-pvpnet-bar a {
-    color: rgb(0, 150, 255);
+    color: rgb(0, 150, 255) !important;
     background: url("https://s3-us-west-2.amazonaws.com/sandworm/images/pvpnet-sprite-v2.png") repeat-x scroll 0px -42px transparent;
     padding: 0px 10px;
     line-height: 31px;
@@ -107,6 +107,13 @@
     border-left: 1px solid rgb(43, 43, 43);
     border-right: 1px solid rgba(35, 35, 35, 0.7);
 }
+
+    .userscript-pvpnet-bar a:hover {
+        background-position: 0px -84px;
+        background-color: rgb(66, 66, 66);
+        color: rgb(255, 255, 255) !important;
+        text-decoration: none;
+    }
 
 .userscript-pvpnet-bar {
     float: right;
