--- a/client/global.css
+++ b/client/global.css
@@ -206,11 +206,12 @@
     min-width: 100px;
     min-height: 20px;
     background: #ffffff;
-    border: 1px solid #b8b8b8;
+    border: 2px solid #999999;
+    z-index: 999;
 }
 /* arrows - :before and :after */
  .userscript-popover:after, .userscript-popover:before {
-    top: 100%;
+    bottom: 100%;
     border: solid transparent;
     content:" ";
     height: 0;
@@ -220,17 +221,17 @@
 }
 .userscript-popover:after {
     border-color: rgba(255, 255, 255, 0);
-    border-top-color: #ffffff;
+    border-bottom-color: #ffffff;
     border-width: 8px;
     left: 50%;
     margin-left: -8px;
 }
 .userscript-popover:before {
-    border-color: rgba(184, 184, 184, 0);
-    border-top-color: #b8b8b8;
-    border-width: 9px;
+    border-color: rgba(153, 153, 153, 0);
+    border-bottom-color: #999999;
+    border-width: 11px;
     left: 50%;
-    margin-left: -9px;
+    margin-left: -11px;
 }
 .userscript-popover.hidden {
     display: none;
