--- a/client/global.css
+++ b/client/global.css
@@ -236,3 +236,63 @@
 .userscript-popover.hidden {
     display: none;
 }
+
+.userscript-summoner-popover-buttons {
+    position: relative;
+    display: inline-block;
+    font-size: 0px;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+    .userscript-summoner-popover-buttons > button {
+        padding: 2px 10px;
+        font-size: 10.2px;
+        position: relative;
+        border-radius: 0px 0px 0px 0px;
+        display: block;
+        float: none;
+        max-width: 100%;
+        width: 160px;
+        margin-bottom: 0px;
+        line-height: 14px;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        color: rgb(51, 51, 51);
+        -webkit-text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
+        text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
+        background-color: rgb(245, 245, 245);
+        background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(230, 230, 230));
+        background-repeat: repeat-x;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(204, 204, 204) rgb(204, 204, 204) rgb(179, 179, 179);
+        -moz-border-top-colors: none;
+        -moz-border-right-colors: none;
+        -moz-border-bottom-colors: none;
+        -moz-border-left-colors: none;
+        -moz-border-image: none;
+        -o-border-image: none;
+        -webkit-border-image: none;
+        border-image: none;
+        -webkit-box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.2) inset, 0px 1px 2px rgba(0, 0, 0, 0.05);
+        box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.2) inset, 0px 1px 2px rgba(0, 0, 0, 0.05);
+        margin: 0px;
+    }
+
+        .userscript-summoner-popover-buttons > button:first-child {
+            margin-left: 0px;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+            border-radius: 4px 4px 0px 0px;
+        }
+
+        .userscript-summoner-popover-buttons > button + button {
+            margin-left: 0px;
+            margin-top: -1px;
+        }
+
+        .userscript-summoner-popover-buttons > button:last-child {
+            border-radius: 0px 0px 4px 4px;
+        }
