--- a/client/global.css
+++ b/client/global.css
@@ -296,3 +296,18 @@
         .userscript-summoner-popover-buttons > button:last-child {
             border-radius: 0px 0px 4px 4px;
         }
+
+        .userscript-summoner-popover-buttons > button:hover,
+        .userscript-summoner-popover-buttons > button:focus,
+        .userscript-summoner-popover-buttons > button:active,
+        .userscript-summoner-popover-buttons > button.active {
+            z-index: 2;
+            color: rgb(51, 51, 51);
+            text-decoration: none;
+            background-position: 0px -15px;
+            -moz-transition: background-position 0.1s linear 0s;
+            -o-transition: background-position 0.1s linear 0s;
+            -webkit-transition: background-position 0.1s linear 0s;
+            transition: background-position 0.1s linear 0s;
+            background-color: rgb(230, 230, 230);
+        }
