--- a/client/global.css
+++ b/client/global.css
@@ -153,6 +153,7 @@
     -o-border-image: none;
     -webkit-border-image: none;
     border-image: none;
+    font-size: 18px;
 }
     .userscript-name:hover {
         opacity: 0.5;
