--- a/client/global.css
+++ b/client/global.css
@@ -332,6 +332,42 @@
 
 .userscript-options-modal {
     display: none;
+    background: none repeat scroll 0% 0% white;
+    padding: 10px;
+    border-radius: 10px 10px 10px 10px;
+}
+
+    .userscript-options-modal > .header {
+        
+    }
+        .userscript-options-modal > .header h1 {
+            font-weight: normal;
+            font-family: "Adobe Garamond Pro",Garamond,Baskerville,"Baskerville Old Face","Hoefler Text","Times New Roman",serif;
+            line-height: 1em;
+            margin: 10px 0px 0px;
+            font-size: 1.4em;
+        }
+
+    .userscript-options-modal > .body {
+
+    }
+    .userscript-options-modal > .footer {
+
+    }
+    
+.userscript-table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 1em;
+    background: none repeat scroll 0% 0% rgb(239, 239, 239);
+}
+    .userscript-table .table-striped tbody tr:nth-child(2n+1) td,
+    .userscript-table .table-striped tbody tr:nth-child(2n+1) th {
+        background-color: rgb(229, 229, 229);
+    }
+
+.userscript-options-modal-close {
+    float: right;
 }
 
 .userscript-pull-left {
@@ -353,3 +389,81 @@
 .userscript-clearfix {
     clear: both;
 }
+
+.userscript-btn {
+    -moz-box-shadow: inset 0px 0px 0px 0px #ffffff;
+    -webkit-box-shadow: inset 0px 0px 0px 0px #ffffff;
+    box-shadow: inset 0px 0px 0px 0px #ffffff;
+    background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
+    background: -moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+    background-color: #f9f9f9;
+    -moz-border-radius: 12px;
+    -webkit-border-radius: 12px;
+    border-radius: 12px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    color: #666666;
+    font-family: arial;
+    font-size: 15px;
+    font-weight: normal;
+    padding: 6px 19px;
+    text-decoration: none;
+    -webkit-text-shadow: 1px 1px 0px #ffffff;
+    text-shadow: 1px 1px 0px #ffffff;
+}
+.userscript-btn:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
+	background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
+	background-color:#e9e9e9;
+}
+    .userscript-btn .active {
+        -moz-box-shadow: inset 0px 0px 0px 0px #7d81f5;
+        -webkit-box-shadow: inset 0px 0px 0px 0px #7d81f5;
+        box-shadow: inset 0px 0px 0px 0px #7d81f5;
+        background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #697bff), color-stop(1, #3939e3) );
+        background: -moz-linear-gradient( center top, #697bff 5%, #3939e3 100% );
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#697bff', endColorstr='#3939e3');
+        background-color: #697bff;
+        -moz-border-radius: 12px;
+        -webkit-border-radius: 12px;
+        border-radius: 12px;
+        border: 1px solid #596fff;
+        display: inline-block;
+        color: #ffffff;
+        font-family: arial;
+        font-size: 15px;
+        font-weight: normal;
+        padding: 6px 19px;
+        text-decoration: none;
+        -webkit-text-shadow: 1px 1px 0px #5462cc;
+        text-shadow: 1px 1px 0px #5462cc;
+    }
+        .userscript-btn .active:hover {
+            background: -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3939e3), color-stop(1, #697bff) );
+            background: -moz-linear-gradient( center top, #3939e3 5%, #697bff 100% );
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3939e3', endColorstr='#697bff');
+            background-color: #3939e3;
+        }
+
+.userscript-btn-group {
+    padding: 0px;
+    margin: 0px;
+    display: inline-block;
+}
+    .userscript-btn-group > .userscript-btn {
+        float: left;
+    }
+    .userscript-btn-group > .userscript-btn:first-child {
+        margin-left: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+    .userscript-btn-group > .userscript-btn:not(:first-child):not(:last-child) {
+        border-radius: 0px 0px 0px 0px;
+    }
+    .userscript-btn-group > .userscript-btn:last-child {
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+    }
