--- a/client/global.css
+++ b/client/global.css
@@ -359,11 +359,13 @@
     border-collapse: collapse;
     width: 100%;
     margin-top: 1em;
-    background: none repeat scroll 0% 0% rgb(239, 239, 239);
 }
     .userscript-table .table-striped tbody tr:nth-child(2n+1) td,
     .userscript-table .table-striped tbody tr:nth-child(2n+1) th {
-        background-color: rgb(229, 229, 229);
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+    .userscript-table .td {
+        padding: 0px 10px;
     }
 
 .userscript-options-modal-close {
