--- a/client/global.css
+++ b/client/global.css
@@ -360,11 +360,11 @@ table.userscript-table {
     width: 100%;
     margin-top: 1em;
 }
-    table.userscript-table .table-striped tbody tr:nth-child(2n+1) td,
-    table.userscript-table .table-striped tbody tr:nth-child(2n+1) th {
+    table.userscript-table.table-striped tbody tr:nth-child(2n+1) td,
+    table.userscript-table.table-striped tbody tr:nth-child(2n+1) th {
         background-color: rgba(0, 0, 0, 0.05);
     }
-    table.userscript-table .td {
+    table.userscript-table td {
         padding: 0px 10px;
     }
 
