--- a/client/global.css
+++ b/client/global.css
@@ -365,7 +365,7 @@ table.userscript-table {
         background-color: rgba(0, 0, 0, 0.05);
     }
     table.userscript-table td {
-        padding: 0px 10px;
+        padding: 4px 10px;
     }
 
 .userscript-options-modal-close {
@@ -385,7 +385,7 @@ table.userscript-table {
 }
 
 .userscript-text-info {
-    color: blue;
+    color: #5555ce;
 }
 
 .userscript-clearfix {
@@ -420,6 +420,46 @@ table.userscript-table {
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
         background-color: #e9e9e9;
     }
+    .userscript-btn.btn-success {
+        color: rgb(255, 255, 255);
+        -webkit-text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
+        background-color: rgb(91, 183, 91);
+        background-image: linear-gradient(to bottom, rgb(98, 196, 98), rgb(81, 163, 81));
+        background-repeat: repeat-x;
+        border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+        padding: 4px 12px;
+        font-size: 14px;
+        line-height: 20px;
+    }
+        .userscript-btn.btn-success:hover {
+            background-color: rgb(81, 163, 81);
+            background-position: 0px -15px;
+            -moz-transition: background-position 0.1s linear 0s;
+            -o-transition: background-position 0.1s linear 0s;
+            -webkit-transition: background-position 0.1s linear 0s;
+            transition: background-position 0.1s linear 0s;
+        }
+    .userscript-btn.btn-danger {
+        color: rgb(255, 255, 255);
+        -webkit-text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
+        background-color: rgb(218, 79, 73);
+        background-image: linear-gradient(to bottom, rgb(238, 95, 91), rgb(189, 54, 47));
+        background-repeat: repeat-x;
+        border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+        padding: 4px 12px;
+        font-size: 14px;
+        line-height: 20px;
+    }
+        .userscript-btn.btn-danger:hover {
+            background-color: rgb(218, 79, 73);
+            background-position: 0px -15px;
+            -moz-transition: background-position 0.1s linear 0s;
+            -o-transition: background-position 0.1s linear 0s;
+            -webkit-transition: background-position 0.1s linear 0s;
+            transition: background-position 0.1s linear 0s;
+        }
 
 .userscript-btn-group {
     padding: 0px;
