--- a/client/global.css
+++ b/client/global.css
@@ -432,7 +432,8 @@ table.userscript-table {
         font-size: 14px;
         line-height: 20px;
     }
-        .userscript-btn.btn-success:hover {
+        .userscript-btn.btn-success:hover,
+        .userscript-btn.btn-success:focus {
             background-color: rgb(81, 163, 81);
             background-position: 0px -15px;
             -moz-transition: background-position 0.1s linear 0s;
@@ -452,13 +453,28 @@ table.userscript-table {
         font-size: 14px;
         line-height: 20px;
     }
-        .userscript-btn.btn-danger:hover {
-            background-color: rgb(218, 79, 73);
+        .userscript-btn.btn-danger:hover,
+        .userscript-btn.btn-danger:focus {
+            background-color: rgb(189, 54, 47);
             background-position: 0px -15px;
             -moz-transition: background-position 0.1s linear 0s;
             -o-transition: background-position 0.1s linear 0s;
             -webkit-transition: background-position 0.1s linear 0s;
             transition: background-position 0.1s linear 0s;
+        }
+    .userscript-btn.btn-x {
+        background-color: transparent;
+        display: inline-block;
+        color: #777777;
+        font-family: arial;
+        font-size: 20px;
+        font-weight: bold;
+        padding: 3px 20px;
+        text-decoration: none;
+    }
+        .userscript-btn.btn-x:active {
+            position: relative;
+            top: 1px;
         }
 
 .userscript-btn-group {
