--- a/client/global.css
+++ b/client/global.css
@@ -338,7 +338,7 @@
 }
 
     .userscript-options-modal > .header {
-        
+        margin: 0px 0px 20px 10px;
     }
         .userscript-options-modal > .header h1 {
             font-weight: normal;
@@ -349,10 +349,10 @@
         }
 
     .userscript-options-modal > .body {
-
+        margin: 10px 0px;
     }
     .userscript-options-modal > .footer {
-
+        margin: 0px 10px 0px 0px;
     }
     
 table.userscript-table {
@@ -469,8 +469,12 @@ table.userscript-table {
         font-family: arial;
         font-size: 20px;
         font-weight: bold;
-        padding: 3px 20px;
+        padding: 0px;
         text-decoration: none;
+        border: none;
+        background: none;
+        position: relative;
+        top: -15px;
     }
         .userscript-btn.btn-x:active {
             position: relative;
