--- a/client/global.css
+++ b/client/global.css
@@ -541,24 +541,24 @@ table.userscript-btn-group tbody {
         border-bottom-left-radius: 0px;
     }
 
-.userscript-btn-group {
+div.userscript-btn-group {
     padding: 0px;
     margin: 0px;
     display: inline-block;
 }
-    .userscript-btn-group .userscript-btn {
+    div.userscript-btn-group .userscript-btn {
         float: left;
         margin-left: -1px;
     }
-    .userscript-btn-group .userscript-btn:first-child {
+    div.userscript-btn-group .userscript-btn:first-child {
         margin-left: 0px;
         border-top-right-radius: 0px;
         border-bottom-right-radius: 0px;
     }
-    .userscript-btn-group .userscript-btn:not(:first-child):not(:last-child) {
+    div.userscript-btn-group .userscript-btn:not(:first-child):not(:last-child) {
         border-radius: 0px 0px 0px 0px;
     }
-    .userscript-btn-group .userscript-btn:last-child {
+    div.userscript-btn-group .userscript-btn:last-child {
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
     }
