page-selection style change

--- a/client/global.less
+++ b/client/global.less
@@ -561,7 +561,7 @@ select.userscript-page-selection {
     padding: 1px;
     height: 25px;
     border: 1px solid #c0c0c0;
-    background: none repeat scroll 0% 0% #f3f4f4;
+    background: none repeat scroll 0% 0% rgb(228, 228, 228);
     vertical-align: middle;
     text-decoration: none;
 }
