--- a/client/global.css
+++ b/client/global.css
@@ -953,7 +953,7 @@ select.userscript-page-selection {
   padding: 1px;
   height: 25px;
   border: 1px solid #c0c0c0;
-  background: none repeat scroll 0% 0% #f3f4f4;
+  background: none repeat scroll 0% 0% #e4e4e4;
   vertical-align: middle;
   text-decoration: none;
 }
