--- a/client/global.less
+++ b/client/global.less
@@ -384,7 +384,7 @@ table.userscript-table {
 }
 
 // userscript-updates-button
-#userscript-updates-button {
+#website-feedback #userscript-updates-button {
     @updates-background-color: rgb(190, 157, 30);
     right: auto;
     left: 20px;
