refactoring; history updated for future changes

--- a/client/global.css
+++ b/client/global.css
@@ -1,4 +1,4 @@
-﻿/* LoL Forum Enhance stylesheets */
+﻿/*! LoL Forum Enhance stylesheets */
 [class^="userscript-icon-"],
 [class*=" userscript-icon-"] {
   display: inline-block;
