colorfix.less temporary included into global.less

--- a/client/less/colorfix.less
+++ b/client/less/colorfix.less
@@ -1,7 +1,7 @@
-﻿/*! Title: LoL Forum Colorfix Extended
-   Based on: https://dl.dropboxusercontent.com/u/...lforum.user.js by Makozer
-   Author: Lord BenneX
-   License: LGPL http://www.gnu.org/licenses/lgpl.html  */
+﻿/*! LoL Forum Colorfix Extended
+    Based on https://dl.dropboxusercontent.com/u/...lforum.user.js by Makozer
+    Author: Lord BenneX
+    License: LGPL http://www.gnu.org/licenses/lgpl.html  */
 
 html body {
     background: url("http://cdn.leagueoflegends.com/lolkit/1.0.27/resources/images/bg-default.jpg" ) repeat fixed 0 0 transparent !important;
